new endpoint for tokeninfo
