# kingpick_auth/controllers/auth_controller.py
@@ -1,38 +1,10 @@
-import connexion
-from datetime import date, datetime
-from typing import List, Dict
-from six import iteritems
-from ..util import deserialize_date, deserialize_datetime
+import base64
+import json
 
+import connexion
+from kingpick_auth.models.auth_info_response import AuthInfoResponse
 from oauth2client import crypt
 
-private_key_pkcs8_pem = """-----BEGIN RSA PRIVATE KEY-----
-MIIEowIBAAKCAQEApnYIVn0XlH9qgcz7Fhes8GTmxi0cZrt17IP/aWV8D+C//npc
-vgCBEuGNnPHyEeMF+lTWJpPgQOVLpBFK7z2RYTU1bowQH0mYXM6iGOFT0vnxoV45
-lD7gbYxVAWVQa9aPBqKeAVDOW97dx1lClWJn2l95rwUl1BcWgv4slV8v8MqF6eX3
-TZoVWOEx6Go8kyA4maa6AYq1fQsxuYPJC+jIRYfPe7FWU7FVc2vq/dzDhxdKcToK
-BTcb5Wrf6CpR7JQr7tefPKjOq4cqAN8PnWmKWdneIc6g8mVQD+UWHGsAsfTibsOh
-qdK2eUb8LRvwb7fvXSIocvdjg88oFcF/yE+aTwIDAQABAoIBAET6Qig8u8mwJt1U
-qHMWKnaPCUXzqYI0igARDoSJJiiaNFTqNYYSRWoihwETDQE2duKtxvPDcTjTC04Y
-UFnkxFpopxSA+6lLYNSMV4VB0e9p3SPGHMv+ZhdfAFaMug+FoEzak+jtqCVPq80Q
-gtPOLETELXNGCc/iJVTwqF7ZS89WIaBnEjIJ8dmd2mv3aLRUvnTyRcLSdDhoAnt/
-HXIjP9VXtMXZyqBDFea3e0ndIGJmCCcQgrIzSt8KJS2gfMAYvgCpY76yEYCwUv7y
-5l0dJg82KqA+H8mT1s4en6K3H2JEX7Y3FOGMYVj6SB2SctGS9nAOu18JJ5Sl+9aW
-02kaJ5ECgYEA0TYyRmG0Zqhye3+DjFbiT5QOJ0R9YCtcZ20TOpX2LPCXnzkBWZqk
-t0Byefvcqv+facK7uoxHlNch0mjDl5l4sgsa3mZ42NX78lNHBEBW8G+Mb4CoVXq0
-RpanTSErc0w3ktvWjwcfmC3gpExN8209mv8peV0s+GaI0vrIO18dvzkCgYEAy7BG
-AZWdFEjWEO+NoNzlc9BIBAIoLhYriMweRYsHUULJbMsWBFbOqhQeBrpys/ESQMRI
-FytuASWY7D4WSVmWlmRcSU5EGAITt/aJ2EotQho5u2CnmaB5jrXjc56pbBux/8C2
-nTEzPLYE1Tw/Vx51UIB/7J17jJJKxI+VsX86nccCgYBeALMQSsBrTA68jOwHt9ZS
-GV1OqYiIGJOZaTo1ncISKTyHb2662zBdopiNVOyu7NKtC7GcPYHAT/XDfA0+ZdgE
-b9bvzS1JiMR++oozT9GAkS6Rv0ZjuhGckf60Ok4yrTFfTGYYuAOrNhn02NBBq3j9
-1t7EyGf3aOLboZEslC1iiQKBgQCvA6PzQpF4V2kPnjWsDYFd9I2cXBoYF1aKsRAl
-ouLDsMYPo6QkUE48lxKBp3xdHnsXiU+EEP3xIFP4URSnK8IXMN6W4hfiJQ66V6xz
-WrDuhkgqt07q0pb/x0tLEf3y9Q0JepWuFRM4TBF1AtJN0c7tP6wrK9l3nE9/+vud
-SnucCwKBgE5xeL4rAU25qtAKPRHNQ9Zep0a66HlOcS5odDcw30mtYusHoD9TJQUW
-qruUEtYkwmo2CKitCJk9fgqJic5253Gu4bhVMJG4EmZ3g5/i1lNg4I9beof6081M
-QiL6oYLmNGSlr4xLD4q7k+nCPhjPl2MQ+pBrGDDh2wqsIulgecse
------END RSA PRIVATE KEY-----"""
 
 def token():
     """
@@ -41,19 +13,20 @@ def token():
 
     :rtype: str
     """
-    __auth_info = _auth_info()
+    auth_info = _auth_info()
 
     payload = dict(
-        sub=__auth_info.get('id'),
-        email=__auth_info.get('email'),
+        sub=auth_info.get('id'),
+        email=auth_info.get('email'),
         aud='cli',
-        iss='kingpick.io'
-    )        
+        iss='cvtool'
+    )
 
-    signer = crypt.Signer.from_string(private_key_pkcs8_pem)
-    jwt = crypt.make_signed_jwt(signer, payload, key_id='frodo')
+    signer = crypt.Signer.from_string("-----BEGIN RSA PRIVATE KEY-----\nMIIEowIBAAKCAQEApofCICDb4Xt5K3+Qq05udbPni6hbAgjwmIBGmcmgcrfIBv6A\nUdj47NdGDQoc4XsTsyNU5w5kB9g8x4wm3gtCb5vukfovPVa81m2N98I2aC0mRKym\ny3sALrZyJ30HkuT9SggF+v2PNoeIUtcFM+WIsCNIvPvmmwdfqUEuHdBUWnAaMMH7\n8gq7V4+QRK5TvMJwC7n3JwPX6qf6fK0oT6FyZaW2+wrjZF5heCjRcYHLnBxk2vix\nKqO4MIXkw3E+fqcWyBrDeYbIIT79vjgMfSjHM9C4xzmuAfilrazjwVMtkAC0lYpT\nq4K5ktD+cjcpzKQ49vRnMh+uABYD/kSu0HKMGwIDAQABAoIBAFusDiw7im9U1j4g\nyhXTZjE7KPKTag3zt+ZrbvIHsWCVVPKstRzZUSan1vMkpwNlClIp1/odzOkYm1TK\nDTdcgWUJNMp9K/YbQnbT9jv2WJb+i7twQ51uB4qveqXMSRgPIHPZeNlTLbw53cyk\ne0O3ToiP0+Hc1XRwGbQFoopc/aKOggwZs4cbDzCro77rIJaR8x1bKyMlG9klgeCC\n+pMARBBClUVu4pMvy4y5tMDpJpQlG0IQ/fLysPF3sOK/7XkHSTnVSHzTOy236ka8\nF6gNe8Qg7h27GCfl1GMSbVDq0aSohlshl9hL9QIogoO1HqpKYEMDLSi+erVGzk63\nM/rOs3kCgYEAxoC9sj4uyjHMU5WL9BviBCVVxf/tMJYWMetRutfz7T81DI/PfYYH\nT//2wt2ylbt3iGpsV1fXRB6e6Vy0UmyoZq2i3oyJpX5SxMl2WpGd4MC2q3rCNLzJ\neqFQPdHppzNvXf2VJm93SVfkbMnvEK2Rs3cRJ3Qzm9wpE8x9z6a8Mc8CgYEA1sQ0\n2uh1Bw34n7fVtJq4fODck/8vsfrCxDtntcZzbq5CP1dTqnxV5jdSnBSCUME7hrSR\nbnOlDOpLnTMdy1R4pqhpapAMWyYXJVTKVcdClGjAPnunNXf6H8CUIrjLOYtzCdxQ\nLqW9ceAoBWIl5KE9Z8du0VRofq50r7lkBTuIT/UCgYB67G6MWoWPIJdvi0RHvpyQ\nBK7BFmNDmy3Ta+4IzoJ3gJTRWp0bFkyg9dlRgwh8QMMc7wp4bCUaQfwWdxoTkMYY\nD560QkNbAIcw5bEtFM+3xp9YQYTSM7ZxAkQ2hC81I1zrz4T1cEFmYc9KryIkKdf4\nUtuEmyj6c7PcVt3yIUaZcQKBgQC7x7ZHKTUZw/d8/ynVzeo9FgcHR/qV7aFaHm7h\nmvDW93ppE5vN1wTsU7bhTXVb0niPoVX/cxH/JuSSQF1uqR8M6Pey+twy3i0isO5w\n7dajGKvudgOPVqXWGXXsnhLi77DYEE/zWWs5JDsZ6eUj8G9WTCPy15C+Ix9Xfguc\nH59h+QKBgF2+ByYIekgNT4rFy7YnRHBg+7YudI09+eePxf0xPg+aebir18vY2lXj\nQulMjfZpysmkEerSHjuHY+HAp2oo5HvaNXYQ8qwEk3dldTXhNy6kYaC3xssaxdtz\nZJz0JVU4mS9NQQcG3l0jExMDVLmPDA4bTE5CQcNBjdjR/eRiOb8L\n-----END RSA PRIVATE KEY-----")
+    jwt = crypt.make_signed_jwt(signer, payload, key_id='root')
 
     return jwt.decode('utf-8')
+
 
 def _base64_decode(encoded_str):
     # Add paddings manually if necessary.
@@ -61,6 +34,7 @@ def _base64_decode(encoded_str):
     if num_missed_paddings != 4:
         encoded_str += b'=' * num_missed_paddings
     return base64.b64decode(encoded_str).decode('utf-8')
+
 
 def _auth_info():
     """Retrieves the authentication information from Google Cloud Endpoints."""
@@ -75,5 +49,8 @@ def _auth_info():
     return user_info
 
 
-def auth_info():
-    return jsonify(_user_info())
+def tokeninfo():
+    """Auth info with Google signed JWT."""
+    return AuthInfoResponse.from_dict(_auth_info())
+
+
