# kingpick_auth/models/__init__.py
@@ -2,3 +2,4 @@
 
 from __future__ import absolute_import
 # import models into model package
+from .auth_info_response import AuthInfoResponse
