# kingpick_auth/swagger/swagger.yaml
@@ -3,7 +3,7 @@ swagger: "2.0"
 info:
   description: "Auth token provider"
   version: "v1"
-  title: "Kingpick Auth API"
+  title: "CVTool Auth API"
 host: "kingpick-auth-api.endpoints.ciandt-cognitive-sandbox.cloud.goog"
 basePath: "/v1/auth"
 tags:
@@ -27,11 +27,28 @@ paths:
       parameters: []
       responses:
         200:
-          description: "Kingpick access token"
+          description: "Cvtool access token"
           schema:
             type: "string"
       security:
       - google_id_token: []
+      x-swagger-router-controller: "kingpick_auth.controllers.auth_controller"
+  /tokeninfo:
+    get:
+      tags:
+      - "auth"
+      description: "Protected resource"
+      operationId: "tokeninfo"
+      produces:
+      - "application/json"
+      parameters: []
+      responses:
+        200:
+          description: "Authentication info."
+          schema:
+            $ref: "#/definitions/AuthInfoResponse"
+      security:
+      - cvtool_token: []
       x-swagger-router-controller: "kingpick_auth.controllers.auth_controller"
 securityDefinitions:
   google_id_token:
@@ -41,7 +58,20 @@ securityDefinitions:
     x-google-issuer: "accounts.google.com"
     x-google-jwks_uri: "https://www.googleapis.com/oauth2/v1/certs"
     x-google-audiences: "764086051850-6qr4p6gpi6hn506pt8ejuq83di341hur.apps.googleusercontent.com,1019062845561-ncr4dtvcshrrlg68nofsbmfnc7mf3g81.apps.googleusercontent.com"
-definitions: {}
+  cvtool_token:
+    type: "oauth2"
+    authorizationUrl: ""
+    flow: "implicit"
+    x-google-issuer: "cvtool"
+    x-google-jwks_uri: "https://storage.googleapis.com/ciandt-cognitive-sandbox.appspot.com/oauth2/v1/certs.json"
+    x-google-audiences: "cli"
+definitions:
+  AuthInfoResponse:
+    properties:
+      id:
+        type: "string"
+      email:
+        type: "string"
 x-google-endpoints:
 - name: "kingpick-auth-api.endpoints.ciandt-cognitive-sandbox.cloud.goog"
   allowCors: "true"
